[gd_scene load_steps=3 format=3 uid="uid://dt1mgh2gutj6k"]

[ext_resource type="Script" uid="uid://dvepga02pu5c4" path="res://AchievementNotification.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.12549, 0.141176, 0.192157, 0.95098)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.843137, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="AchievementNotification" type="CanvasLayer"]
layer = 100
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 311.0
offset_top = 17.0
offset_right = 811.0
offset_bottom = 178.0

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("1")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="IconRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 24
text = "ACHIEVEMENT UNLOCKED!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Achievement Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="DescriptionLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "Achievement description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
